Bug 467459: make sure PresShell::Paint() uses an opaque color for the backstop; r+sr=roc